--- a/ProgettoSBB/sbbFrontNuovo/src/app/top-menu/top-menu.css
+++ b/ProgettoSBB/sbbFrontNuovo/src/app/top-menu/top-menu.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&display=swap');
-
 /* Container della Navbar */
 .navbar-main {
   border-top: 6px solid #7b1a1a;
@@ -43,7 +41,7 @@
 
 /* Nome struttura */
 .hotel-name {
-  font-family: 'Cormorant Garamond', serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   font-size: 1.3rem;
   font-weight: 600;
   color: #607d8b;
