effettuate modifiche richieste

--- a/ProgettoSBB/sbbFrontNuovo/src/app/insert-guest/insert-guest.html
+++ b/ProgettoSBB/sbbFrontNuovo/src/app/insert-guest/insert-guest.html
@@ -1,1 +1,83 @@
-<p>insert-guest works!</p>
+<div class="w3-container w3-padding-large">
+
+  <!-- Header con icona -->
+  <div class="guest-header-box" (click)="toggleForm()" style="cursor:pointer">
+    <div style="display:flex; align-items:center; gap:12px;">
+      <img src="img/iconaInsertGuest.png" alt="Inserisci ospite" class="header-icon">
+      <h2 class="page-title" style="margin:0;">Inserisci Ospite</h2>
+    </div>
+    <i class="fa chevron"
+       [class.fa-chevron-down]="!formVisible()"
+       [class.fa-chevron-up]="formVisible()">
+    </i>
+  </div>
+
+  <!-- Form -->
+  @if (formVisible()) {
+    <form class="guest-form" #guestForm="ngForm" (ngSubmit)="submit()">
+
+      <div class="form-row">
+        <div class="form-group">
+          <label>Nome</label>
+          <input type="text" name="firstName" [(ngModel)]="guest.firstName" required
+                 placeholder="Mario" class="form-input">
+        </div>
+        <div class="form-group">
+          <label>Cognome</label>
+          <input type="text" name="lastName" [(ngModel)]="guest.lastName" required
+                 placeholder="Rossi" class="form-input">
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label>Codice Fiscale</label>
+        <input type="text" name="ssn" [(ngModel)]="guest.ssn" required
+               minlength="16" maxlength="16"
+               placeholder="RSSMRA80A01H501U" class="form-input"
+               style="text-transform:uppercase">
+      </div>
+
+      <div class="form-row">
+        <div class="form-group">
+          <label>Data di nascita</label>
+          <input type="date" name="dob" [(ngModel)]="guest.dob" class="form-input">
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label>Indirizzo</label>
+        <input type="text" name="address" [(ngModel)]="guest.address" required
+               placeholder="Via Roma 1" class="form-input">
+      </div>
+
+      <div class="form-group">
+        <label>Città</label>
+        <input type="text" name="city" [(ngModel)]="guest.city" required
+               placeholder="Milano" class="form-input">
+      </div>
+
+      <!-- Feedback -->
+      @if (success()) {
+        <div class="msg-success">
+          <i class="fa fa-check-circle"></i> Ospite salvato con successo!
+        </div>
+      }
+      @if (errorMsg()) {
+        <div class="msg-error">
+          <i class="fa fa-exclamation-circle"></i> {{ errorMsg() }}
+        </div>
+      }
+
+      <div class="form-actions">
+        <button type="submit" class="btn-submit" [disabled]="guestForm.invalid">
+          <i class="fa fa-save"></i> Salva
+        </button>
+        <button type="button" class="btn-reset" (click)="reset()">
+          <i class="fa fa-undo"></i> Reset
+        </button>
+      </div>
+
+    </form>
+  }
+
+</div>
