--- a/ProgettoSBB/sbbFrontNuovo/src/app/home-page/home-page.html
+++ b/ProgettoSBB/sbbFrontNuovo/src/app/home-page/home-page.html
@@ -1,15 +1,21 @@
 <div class="w3-row">
-    <div class="w3-third">
-        <!-- componente todays arrivals O QUALCOSA DI SIMILE... -->
-         <app-todays-arrivals />
+
+  <div class="w3-third">
+    <app-todays-arrivals />
+  </div>
+
+  <div class="w3-third">
+    <app-todays-departures />
+  </div>
+
+  <div class="w3-third">
+    <div class="operations-box">
+      <div class="operations-title">
+        <i class="fa fa-cogs"></i> Operazioni Possibili
+      </div>
+      <app-insert-guest />
+      <app-insert-quick-booking />
     </div>
-    <div class="w3-third">
-        <!-- componente todays departures O QUALCOSA DI SIMILE... -->
-         <app-todays-departures />
-    </div>
-    <div class="w3-third">
-        <!-- componente insert booking O QUALCOSA DI SIMILE... -->
-         <!-- rendete più veloce possibile il caso comune-->
-          <app-insert-quick-booking />
-    </div>
+  </div>
+
 </div>
