--- a/ProgettoSBB/sbbFrontNuovo/src/app/insert-quick-booking/insert-quick-booking.html
+++ b/ProgettoSBB/sbbFrontNuovo/src/app/insert-quick-booking/insert-quick-booking.html
@@ -15,46 +15,24 @@
   @if (formVisible()) {
     <form class="booking-form" #bookingForm="ngForm" (ngSubmit)="submit()">
 
-      <!-- Ospite autocomplete -->
-      <div class="form-group">
-        <label>Ospite</label>
-        <div class="autocomplete-wrapper">
-          <input type="text"
-                 [value]="guestInput()"
-                 (input)="onGuestInput($any($event.target).value)"
-                 (focus)="showDropdown.set(true)"
-                 (blur)="onGuestBlur()"
-                 placeholder="Cerca per nome o cognome..."
-                 class="form-input"
-                 autocomplete="off">
-          @if (showDropdown() && filteredGuests().length > 0) {
-            <div class="autocomplete-dropdown">
-              @for (g of filteredGuests(); track g.id) {
-                <div class="autocomplete-item" (mousedown)="selectGuest(g)">
-                  <i class="fa fa-user"></i>
-                  {{ g.lastName }} {{ g.firstName }}
-                </div>
-              }
-            </div>
-          }
-        </div>
-      </div>
+      <!-- Selezione ospite delegata al componente dedicato -->
+      <app-guest-picker (guestSelected)="onGuestSelected($event)"></app-guest-picker>
 
       <!-- Date -->
       <div class="form-row">
         <div class="form-group">
           <label><i class="fa fa-sign-in"></i> Check-in</label>
-          <input type="date" name="from" [(ngModel)]="form.from" required class="form-input">
+          <input type="date" name="checkIn" [(ngModel)]="form.checkIn" required class="form-input">
         </div>
         <div class="form-group">
           <label><i class="fa fa-sign-out"></i> Check-out</label>
-          <input type="date" name="to" [(ngModel)]="form.to" required class="form-input">
+          <input type="date" name="checkOut" [(ngModel)]="form.checkOut" required class="form-input">
         </div>
       </div>
 
       <!-- Cerca camere -->
       <button type="button" class="btn-search"
-              [disabled]="!form.from || !form.to"
+              [disabled]="!form.checkIn || !form.checkOut"
               (click)="searchRooms()">
         <i class="fa fa-search"></i> Cerca camere disponibili
       </button>
