--- a/ProgettoSBB/sbbFrontNuovo/src/app/home-page/home-page.html
+++ b/ProgettoSBB/sbbFrontNuovo/src/app/home-page/home-page.html
@@ -14,7 +14,7 @@
         <i class="fa fa-cogs"></i> Operazioni Possibili
       </div>
       <app-insert-guest />
-      <app-insert-quick-booking />
+      <app-insert-booking />
     </div>
   </div>
 
