--- a/ProgettoSBB/sbbFrontNuovo/src/app/todays-departures/todays-departures.html
+++ b/ProgettoSBB/sbbFrontNuovo/src/app/todays-departures/todays-departures.html
@@ -22,7 +22,7 @@
   @if (toCleanBookings().length > 0) {
     <div class="bookings-list">
       @for (booking of toCleanBookings(); track booking.id) {
-        <app-booking-row [booking]="booking" (cleanedDone)="onCleanedDone($event)"></app-booking-row>
+        <app-booking-row [booking]="booking" (completeDone)="onCleanedDone($event)"></app-booking-row>
       }
     </div>
   }
