--- a/ProgettoSBB/sbbFrontNuovo/src/app/booking-row/booking-row.html
+++ b/ProgettoSBB/sbbFrontNuovo/src/app/booking-row/booking-row.html
@@ -62,8 +62,8 @@
         }
         @if (isToday(booking().checkOut) || isPast(booking().checkOut)) {
           <div class="action-item">
-            <button class="btn-icon" (click)="checkout()" title="Check-out">
-              <img src="img/toCleanIcon.png" alt="Check-out">
+<button class="btn-icon" (click)="checkout()" title="Check-out">
+              <img src="img/checkOutIcona.png" alt="Check-out">
             </button>
             <span class="action-label warn">Check out</span>
           </div>
