--- a/ProgettoSBB/sbbFrontNuovo/src/app/top-menu/top-menu.html
+++ b/ProgettoSBB/sbbFrontNuovo/src/app/top-menu/top-menu.html
@@ -7,7 +7,11 @@
     </div>
 
     <!-- Spazio centrale -->
-    <div class="w3-col s6 m6 l6"></div>
+    <div class="w3-col s6 m6 l6 nav-center">
+      <button routerLink="/rooms" class="nav-btn">
+        <i class="fa fa-bed"></i> Stanze
+      </button>
+    </div>
 
     <!-- Info utente (destra) -->
     <div class="w3-col s4 m4 l4 nav-right">
